--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi==0.110.0
-uvicorn==0.30.1
-pydantic==2.6.4
-pycryptodome==3.20.0
-argon2-cffi==23.1.0
-colorama==0.4.6
-pytest==8.1.1
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+pydantic==2.3.0
+pycryptodome==3.17
+cryptography==41.0.3
+numpy==1.27.0
+python-dotenv==1.0.0
+loguru==0.7.0
+httpx==0.24.1
