--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.22.0
 pydantic==2.3.0
 pycryptodome==3.17
 cryptography==41.0.3
-numpy==1.27.0
-python-dotenv==1.0.0
-loguru==0.7.0
-httpx==0.24.1
+numpy>=1.24.0,<2.0
+requests>=2.28.0
+httpx>=0.24.0
+pytest>=7.4.0
