--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
+fastapi==0.111.0
+uvicorn==0.29.0
 pydantic==2.3.0
 pycryptodome==3.17
 cryptography==41.0.3
